@@ -1,3 +1,8 @@
+2003-08-31  Vangelis Rokas <vrokas@otenet.gr>
+	* src/pic16/main.c: corrected offsets of interrupt vectors in _pic16_genIVT()
+	* src/pic16/pcode.c: fix to disable inserting BANKSEL directive
+	  before instructions that use the _STATUS register
+
 2003-08-31  Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/mcs51/gen.c (freeAsmop): fixed off by one in stack offset (AOP_STK)
